# idemt

./: .env.example  .gitignore  AGENTS.md  PROMPT.md  README.md  bootstrap.mjs  conflit.md  error_1.md  error_2.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  vite.config.ts
dll/: PyShared_v2.manifest.json
dll/SpectralCLBridge/: CMakeLists.txt  README.md  SpectralCLBridge.cpp  SpectralCLBridge.h
docs/: ARCHITECTURE.md  ATTRIBUTION.md  CODEX_REVIEW.md  PROGRESS.md  SETTINGS.md  TELNETMT.md  WORKSPACES.md
prompts/: codex-review-setup.prompt.md
pyplotmt/app/: README.md  build_install.cmd
pyplotmt/tools/: pypmt-doctor.mjs  pypmt-install.mjs  pypmt-run.mjs
scripts/: add-compile-to-path.ps1  add-compile-to-path.sh  build-pyshared.ps1  codex-pty-log.py  codex-tmux.sh  codex_log_pane.py  codex_tmux.py  copy-monaco.mjs  dev-electron.mjs  setup-telnetmt-junction.ps1
services/telnetmt/: CODEX_EXEC_PROMPT.md  PROMPT.md  install_junctions.bat  telnetmt_files_list.txt  telnetmt_files_list_best_practice.txt  telnetmt_files_list_filtered.txt
src/main/: ffi-napi.d.ts  ipc.ts  logger.ts  main.ts  windowBackground.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.html  main.tsx  styles.css  vite-env.d.ts
src/shared/: ipc.ts
telnetmt/: AGENTS.md  CODEX_EXEC_PROMPT.md  TelnetMT_SocketTelnetService.ex5  install_junctions.bat  telnetmt_files_list_best_practice.txt
telnetmt/Experts/: TelnetMT_OficialTelnetListener.ex5
telnetmt/Services/: TelnetMT.mq5  TelnetMT_BridgeHandlers.mqh  (+5 more)
(+156 files in other folders)
